--- a/.dvc/config
+++ b/.dvc/config
@@ -1,4 +1,5 @@
 [core]
-    remote = storage
-['remote "storage"']
+    remote = myremote
+['remote "myremote"']
     url = gs://snapnutrition_data_bucket
+    version_aware = true
