writes annotations to the intermediate and output directory

--- a/src/image_prep/Dockerfile
+++ b/src/image_prep/Dockerfile
@@ -19,4 +19,4 @@ WORKDIR /image_prep
 COPY Pipfile .
 RUN pipenv install --deploy --ignore-pipfile --dev
 
-ENTRYPOINT ["pipenv", "run"]
+ENTRYPOINT ["pipenv", "run", "python", "-m", "image_prep"]
