[dvc-gcs-vm] Adding container to process labels

--- a/data_labels_processing/Dockerfile
+++ b/data_labels_processing/Dockerfile
@@ -48,6 +48,7 @@ ADD --chown=app:app data_labels_processing/Pipfile data_labels_processing/Pipfil
 RUN pipenv sync
 RUN pip install pandas
 RUN pip install numpy
+RUN pip install scikit-learn
 
 # Add the rest of the source code. This is done last so we don't invalidate all
 # layers when we change a line of code.
