--- a/data_labels_processing/Dockerfile
+++ b/data_labels_processing/Dockerfile
@@ -46,9 +46,9 @@ WORKDIR /app
 ADD --chown=app:app data_labels_processing/Pipfile data_labels_processing/Pipfile.lock data_labels_processing/labels_processing.py /app/
 
 RUN pipenv sync
-#RUN pip install pandas
-#RUN pip install numpy
-#RUN pip install scikit-learn
+RUN pip install pandas
+RUN pip install numpy
+RUN pip install scikit-learn
 
 # Add the rest of the source code. This is done last so we don't invalidate all
 # layers when we change a line of code.
