--- a/model-training/package/trainer/model_config.yml
+++ b/model-training/package/trainer/model_config.yml
@@ -2,7 +2,7 @@ input_data:
   version: # TF Data/Records object
 
 build_params:
-  model_name: test
+  model_name: vgg16
   input_shape: !!python/tuple [180, 180, 3] # [rows, columns, channels]
   n_classes: 5
   n_filters: 32 
