--- a/model-training/package/trainer/model_config.yml
+++ b/model-training/package/trainer/model_config.yml
@@ -5,7 +5,7 @@ build_params:
   # Model type options:
   # default, mobilenet_v2, efficientnet_b7, efficientnet_v2l
   # vgg16, vgg19, xception, resnet50
-  model_type: efficientnet_v2l
+  model_type: resnet50
   input_shape: !!python/tuple [224, 224, 3] # [rows, columns, channels]
   dense_nodes: 64
   output_activation: linear
@@ -19,13 +19,13 @@ build_params:
   pool_size: !!python/tuple [2, 2] # [rows, columns]
 
 compile_params:
-  loss: mean_squared_error
+  loss: mae
   optimizer: adam
   learning_rate: 0.001
-  metrics: [rmse, mae]
+  metrics: [rmse, mse, mae]
 
 train_params:
-  batch_size: 4
+  batch_size: 128
   epochs: 200
   early_stopping: True
   patience: 10
