--- a/api-service/Pipfile
+++ b/api-service/Pipfile
@@ -8,8 +8,11 @@ verify_ssl = true
 [packages]
 uvicorn = "*"
 fastapi = "*"
+pandas = "*"
 google-cloud-storage = "*"
+tensorflow-hub = "*"
 python-multipart = "*"
+tensorflow = "==2.13.1"
 google-cloud-aiplatform = "*"
 
 [requires]
