--- a/app/src/deployment/inventory.yml
+++ b/app/src/deployment/inventory.yml
@@ -1,22 +1,22 @@
 all:
     vars:
-      ansible_user: sa_100110341521630214262
-      ansible_ssh_private_key_file: "../../secrets/ssh-key-deployment"
-      gcp_service_account_file: "../../secrets/deployment.json"
-      gcp_service_account_email: "deployment@ac215-project.iam.gserviceaccount.com"
+      ansible_user: sa_115171854076586789459
+      ansible_ssh_private_key_file: "/../secrets/ssh-key-deployment"
+      gcp_service_account_file: "/../secrets/deployment.json"
+      gcp_service_account_email: "deployment@csci-115-398800.iam.gserviceaccount.com"
       gcp_auth_kind: "serviceaccount"
       gcp_scopes: "https://www.googleapis.com/auth/compute"
-      gcp_project: "ac215-project"
+      gcp_project: "csci-115-398800"
       gcp_region: "us-east1"
       gcp_zone: "us-east1-b"
-      docker_network_name: "appnetwork"
-      persistent_disk_name: "mushroom-app-demo-disk"
+      docker_network_name: "snap-nutrition-network"
+      persistent_disk_name: "snapnutrition-app-demo-disk"
       persistent_disk_size: 50
-      machine_instance_name: "mushroom-app-demo"
+      machine_instance_name: "snapnutrition-app-auto"
       machine_type: "n2d-standard-2"
       machine_disk_size: 50
 
     children:
         appserver:
             hosts:
-                34.135.118.221:
+                34.148.245.32:
