Deployment: Fixed bug in env var GCP_PROJECT not being injected

--- a/app/src/deployment/deploy-setup-containers.yml
+++ b/app/src/deployment/deploy-setup-containers.yml
@@ -67,6 +67,7 @@
         env:
           GOOGLE_APPLICATION_CREDENTIALS: "/secrets/gcp-service.json"
           GCS_BUCKET_NAME: "snapnutrition_data_bucket"
+          GCP_PROJECT: "{{ gcp_project }}"
         networks:
           - name: "{{docker_network_name}}"
         volumes:
