--- a/app/src/deployment/inventory.yml
+++ b/app/src/deployment/inventory.yml
@@ -1,8 +1,8 @@
 all:
     vars:
-      ansible_user: sa_115171854076586789459
-      ansible_ssh_private_key_file: "/../secrets/ssh-key-deployment"
-      gcp_service_account_file: "/../secrets/deployment.json"
+      ansible_user: sa_113722258430510671890
+      ansible_ssh_private_key_file: "/../../../secrets/ssh-key-deployment"
+      gcp_service_account_file: "/../../../secrets/deployment.json"
       gcp_service_account_email: "deployment@csci-115-398800.iam.gserviceaccount.com"
       gcp_auth_kind: "serviceaccount"
       gcp_scopes: "https://www.googleapis.com/auth/compute"
@@ -10,13 +10,13 @@ all:
       gcp_region: "us-east1"
       gcp_zone: "us-east1-b"
       docker_network_name: "snap-nutrition-network"
-      persistent_disk_name: "snapnutrition-app-demo-disk"
+      persistent_disk_name: "snapnutrition-app-disk-2"
       persistent_disk_size: 50
-      machine_instance_name: "snapnutrition-app-auto"
+      machine_instance_name: "snapnutrition-app-auto-2"
       machine_type: "n2d-standard-2"
       machine_disk_size: 50
 
     children:
         appserver:
             hosts:
-                34.148.245.32:
+                35.196.118.61:
