--- a/app/src/deployment/deploy-docker-images.yml
+++ b/app/src/deployment/deploy-docker-images.yml
@@ -12,13 +12,13 @@
   - name: Build frontend container image
     community.general.docker_image:
       build:
-        path: /frontend-react
-      name: gcr.io/{{ gcp_project }}/snapnutrition-app-frontend-react:{{ tag.stdout}}
+        path: /frontend
+      name: gcr.io/{{ gcp_project }}/snapnutrition-app-frontend-react-c:{{ tag.stdout}}
       source: build
   - name: Push frontend image to GCR
     community.general.docker_image:
-      name: gcr.io/{{ gcp_project }}/snapnutrition-app-frontend-react:{{ tag.stdout}}
-      repository: gcr.io/{{ gcp_project }}/snapnutrition-app-frontend-react:{{ tag.stdout}}
+      name: gcr.io/{{ gcp_project }}/snapnutrition-app-frontend-react-c:{{ tag.stdout}}
+      repository: gcr.io/{{ gcp_project }}/snapnutrition-app-frontend-react-c:{{ tag.stdout}}
       push: yes
       source: local
   - name: Build api-service container image
