--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,12 +22,13 @@
     "base-64": "^1.0.0",
     "dayjs": "^1.11.10",
     "firebase": "^10.5.2",
-    "next": "13.5.6",
+    "next": "14.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-firebase-hooks": "^5.1.1",
-    "react-redux": "^8.1.3"
+    "react-redux": "^8.1.3",
+    "yarn": "^1.22.21"
   },
   "devDependencies": {
     "@types/node": "^20.8.7",
