--- a/app/src/frontend/Dockerfile
+++ b/app/src/frontend/Dockerfile
@@ -1,29 +1,24 @@
-# using staged builds
-FROM node:20.9.0-buster-slim as builder
-# make the directory where the project files will be stored
-RUN mkdir -p /usr/src/next-nginx
-# set it as the working directory so that we don't need to keep referencing it
-WORKDIR /usr/src/next-nginx
-# Copy the package.json file
-COPY package.json package.json
-# install project dependencies
+FROM node:20.9.0-buster-slim as build
+
+WORKDIR /app
+ENV PATH /app/node_modules/.bin:$PATH
+ENV PUBLIC_URL /
+
+COPY package.json ./
+COPY yarn.lock ./
 RUN npm install
-# copy project files
-# make sure to set up .dockerignore to copy only necessary files
-COPY . .
-# run the build command which will build and export html files
+
+COPY . ./
 RUN npm run build
 
-# bundle static assets with nginx
-FROM nginx:1.21.0-alpine as production
+# Nginx wrapper to serve static files
+FROM nginx:stable
 ENV NODE_ENV production
 # remove existing files from nginx directory
 RUN rm -rf /usr/share/nginx/html/*
-# copy built assets from 'builder' stage
-COPY --from=builder /usr/src/next-nginx/out /usr/share/nginx/html
+# copy built assets from 'build' stage
+COPY --from=build /app/out /usr/share/nginx/html
 # add nginx config
 COPY nginx.conf /etc/nginx/conf.d/default.conf
-# expose port 80 for nginx
 EXPOSE 80
-# start nginx
 CMD ["nginx", "-g", "daemon off;"]
