--- a/.github/workflows/k8s_deploy.yml
+++ b/.github/workflows/k8s_deploy.yml
@@ -36,10 +36,9 @@ jobs:
           chmod 0777 secrets
 
       - name: Create secrets file
-        run: 'echo "$SSH_KEY" > key'
-        shell: bash
-        env:
-          SSH_KEY: ${{ secrets.DEPLOYMENT }}
+        run: |-
+          echo ${{ secrets.DEPLOYMENT }} > ~/secrets/deployment.json
+          echo ${{ secrets.DEPLOYMENT }} > ~/secrets/gcp-service.json
           
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
