--- a/.github/workflows/k8s_deploy.yml
+++ b/.github/workflows/k8s_deploy.yml
@@ -37,8 +37,8 @@ jobs:
 
       - name: Create secrets file
         run: |
-          echo '${{ secrets.DEPLOYMENT }}' > ${{ github.workspace }}/secrets/secrets/deployment.json
-          echo '${{ secrets.DEPLOYMENT }}' > ${{ github.workspace }}/secrets/secrets/gcp-service.json
+          echo '${{ secrets.DEPLOYMENT }}' > ${{ github.workspace }}/secrets/deployment.json
+          echo '${{ secrets.DEPLOYMENT }}' > ${{ github.workspace }}/secrets/gcp-service.json
           
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
