--- a/app/src/deployment/Dockerfile
+++ b/app/src/deployment/Dockerfile
@@ -51,4 +51,4 @@ RUN set -ex; \
 
 # Start a new shell to use the installed SDK
 ENTRYPOINT ["/bin/bash","./docker-entrypoint.sh"]
-CMD ["ansible-playbook deploy-k8s-cluster.yml -i inventory.yml --extra-vars cluster_state=present"]
+CMD ["/bin/bash", "ansible-playbook deploy-k8s-cluster.yml -i inventory.yml --extra-vars cluster_state=present"]
